--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Body Systems</title>
+    <title>Vicious Cycles</title>
      <link rel="stylesheet" href="css/systems.css">
+    <style>
+        Body {
+background-color: #E7FBFB
+    
+        }
+        
+        Header H1 {
+font-size: 4.1rem;
+text-align: center;
+color: #010B5B;
+        }
 </head>
 <body>
     Body Systems
